# sp-service

./: .api_hash  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  autobahn_rules.yml  build.rs  docker-compose.yml
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  deploy-oci.yml  devsecops.yml  docker.yml  e2e.yml  release_notes.yml
docs/api/: README.md  openapi.yaml
e2e/: README.md  requirements.txt  run_tests.sh
e2e/tests/: conftest.py  test_chat_api.py  test_deep_research.py  test_health.py  test_rag_pipeline.py  test_tools.py
prompts/: core_vault.toml
python_workers/: academic_matrix.py  analyze_and_join_time_series.py  ast_jail.py  culture_matrix.py  empirical_verifier.py  engineering_matrix.py  health_check_apis.py  market_pricing_matrix.py  registry.json  sovereign_matrix.py  wiki_leaks_matrix.py  wiki_matrix.py
python_workers/dataset_proxies/: gasolina.json
python_workers/tests/: test_academic_matrix.py  test_analyze_joiner.py  test_culture_matrix.py  test_empirical_verifier.py  test_security_regression.py  test_sovereign_matrix.py
scripts/: README.md  optimize_ollama.sh  refactor_let_chains.py
src/: O usuário encontrou um cara Inteligente.md  adblocker.rs  api.rs  api.rs.bak  api_chat.rs  api_gateway.rs  api_mcp.rs  api_mesh.rs  api_multimodal.rs  api_projects.rs  api_rag.rs  api_settings.rs  api_tools.rs  api_trainer.rs  api_vault.rs  auto_evaluator.rs  db.rs  events.rs  garbage_collector.rs  guardrails.rs  hardware.rs  health_gate.rs  kms.rs  lib.rs  main.rs  mcp.rs  mesh_router.rs  models.rs  multimodal.rs  network.rs  office_parser.rs  openapi.rs  oracle_worker.rs  os_installer.rs  plan_execute.rs  prompt_vault.rs  public_apis.b64  rag.rs  realtime.rs  research.rs  (+7 more)
src/api_tools/: openrouter_client.rs  qwen_client.rs
src/common/: traits.rs
src/schemas/: 001_sensus_init.sql  002_ephemeral_knowledge.sql  003_sovereign_prompts.sql  004_ticker_registry.sql
src/tests/: garbage_collector_tests.rs  guardrails_tests.rs  hardware_tests.rs  kms_tests.rs  mcp_tests.rs  memory_manager_tests.rs  mod.rs  multimodal_tests.rs  network_tests.rs  office_parser_tests.rs  openrouter_tests.rs  oracle_worker_tests.rs  prompt_vault_tests.rs  provider_integration_tests.rs  rag_tests.rs  regression_tests.rs  research_tests.rs  rewoo_tests.rs  sandbox_tests.rs  security_tests.rs  stress_tests.rs  sync_engine_tests.rs  telemetry_tests.rs  turboquant_tests.rs
tests/: bench_stream.py  stress_payload.py
