[package]
name = "sovereign-core"
version = "0.8.3"
edition = "2024"
license = "MIT"

[dependencies]
# Web Framework & Async Runtime (O novo FastAPI / Uvicorn)
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }

# Serialization & Deserialization (O novo Pydantic)
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# Request manipulation (Para o Roteador Híbrido Cíbrido)
reqwest = { version = "0.12.4", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3.30"
scraper = "0.19.0"

# Ciber-Paralelismo (Thrashing de CPU)
rayon = "1.10.0"

# Environment & Logging
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
dirs = "6.0.0"
walkdir = "2.5.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
notify = "8.2.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-recursion = "1.1.1"
urlencoding = "2.1.3"
aes-gcm = "0.10.3"
rand = "0.10.0"
zeroize = "1.8.2"
base64 = "0.22.1"
mdns-sd = "0.18.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
lazy_static = "1.4.0"
sysinfo = "0.38.4"
