[package]
name = "sp-service"
version = "1.4.0-dev"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
build = "build.rs"

[dependencies]
# Web Framework & Async Runtime (O novo FastAPI / Uvicorn)
axum = { version = "0.7.5", features = ["multipart", "ws"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "limit"] }

# Serialization & Deserialization (O novo Pydantic)
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

# Request manipulation (Para o Roteador Híbrido Cíbrido)
reqwest = { version = "0.12.4", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
futures-util = "0.3.30"
scraper = "0.20.0"
regex = "1.10.3"

# Ciber-Paralelismo (Thrashing de CPU)
rayon = "1.10.0"

# Environment & Logging
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
dirs = "6.0.0"
walkdir = "2.5.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
notify = "8.2.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-recursion = "1.1.1"
urlencoding = "2.1.3"
aes-gcm = "0.10.3"
rand = "0.10.0"
zeroize = "1.8.2"
base64 = "0.22.1"
sha2 = "0.10.8"
mdns-sd = "0.18.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

mime_guess = "2.0.5"
lazy_static = "1.4.0"
sysinfo = "0.38.4"
async-stream = "0.3.6"
tokio-util = "0.7.18"
adblock = "0.12.1"
fastembed = "5.13.0"
readability = "0.3.0"
unicode-segmentation = "1.13.2"
# Manipulação Multimodal (Visão & Áudio)
ort = { version = "2.0.0-rc.4", features = ["download-binaries"] }
symphonia = { version = "0.5.4", features = ["all"] }
image = "0.25.1"
ndarray = "0.16.1"

# Office Multimodal Ingestion
calamine = "0.34.0"
csv = "1.3.0"
quick-xml = "0.31.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde_yaml = "0.9"
toml = "0.8"
url = "2.5.8"
futures = "0.3.32"
statrs = "0.18.0"
rand_distr = "0.6.0"
ash = "0.38.0"
rand_chacha = "0.10.0"
anyhow = "1.0.82"
tokio-tungstenite = "0.29.0"

[dev-dependencies]
tempfile = "3.10.1"
tower = { version = "0.4.13", features = ["util"] }

[build-dependencies]
sha2 = "0.10.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# NOTA: sqlx v0.8 compila o SQLite de forma estatica (bundled) por padrao.
# A feature 'sqlite-unbundled' e usada apenas para quem quer linkagem dinamica.
# Nenhuma configuracao extra e necessaria para Windows/macOS.
